added java 15,16,17 notes